// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxPopover customize 1`] = `
<body>
  <button
    class="button primary"
    type="button"
  >
    Test
  </button>
  <div
    class="popover bs-popover-end fade"
    role="tooltip"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="popover-arrow"
      style="position: absolute;"
    />
    <div
      class="popover-header"
    >
      title
    </div>
    <div
      class="popover-body"
    >
      content
    </div>
  </div>
</body>
`;

exports[`loads and displays CxPopover component 1`] = `
<div>
  <button
    class="button primary"
    type="button"
  >
    Test
  </button>
</div>
`;
